--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,41 +1,15 @@
-# Core FastAPI dependencies
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-pydantic==2.5.0
-pydantic-settings==2.1.0
-
-# ML and AI dependencies
-torch==2.1.1
-transformers==4.36.2
-scikit-learn==1.3.2
-numpy==1.24.3
-pandas==2.1.4
-
-# Speech processing
-# vosk==0.3.45 - Removed due to compatibility issues
-librosa==0.10.1
-soundfile==0.12.1
-
-# Web scraping and content extraction
-newspaper3k==0.2.8
-beautifulsoup4==4.12.2
+uvicorn==0.24.0
 requests==2.31.0
-aiohttp==3.9.1
-
-# Image and video processing
-opencv-python==4.8.1.78
-mediapipe==0.10.7
-Pillow==10.1.0
-
-# Utilities
+beautifulsoup4==4.12.2
+newspaper3k==0.2.8
+transformers==4.35.2
+torch==2.1.0
+groq==0.4.1
+python-multipart==0.0.6
+aiofiles==23.2.0
+readability-lxml==0.8.4.1
+feedparser==6.0.10
 python-dotenv==1.0.0
-loguru==0.7.2
-aiofiles==23.2.1
 httpx==0.25.2
-
-# Development and testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-black==23.11.0
-flake8==6.1.0
+pydantic==2.5.0
