--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,17 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-requests==2.31.0
-beautifulsoup4==4.12.2
-newspaper3k==0.2.8
-transformers==4.35.2
-torch==2.1.0
+httpx==0.25.2
+feedparser==6.0.10
+python-dotenv==1.0.0
+pydantic==2.5.0
 groq==0.4.1
+redis==5.0.1
+psycopg2-binary==2.9.9
+sqlalchemy==2.0.23
+alembic==1.13.1
+transformers==4.36.0
+torch==2.1.0
+tokenizers==0.15.0
 python-multipart==0.0.6
 aiofiles==23.2.0
 readability-lxml==0.8.4.1
-feedparser==6.0.10
-python-dotenv==1.0.0
-httpx==0.25.2
-pydantic==2.5.0
